--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -127,4 +127,5 @@
     <string name="unsolved_problem">НЕ РЕШЕНА</string>
     <string name="problem_edited">Проблема успешно отредактирована</string>
     <string name="only_my_problems"> Показать только мои проблемы</string>
+    <string name="location">Местоположение</string>
 </resources>
