--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -129,5 +129,5 @@
     <string name="edit_problem_activity">Редактирование проблемы</string>
     <string name="only_my_problems"> Показать только мои проблемы</string>
     <string name="location">Местоположение</string>
-    <string name="notify_photos_loading">Загрузка фото</string>
+    <string name="notify_photos_loading">Ecomap: загрузка фотографий</string>
 </resources>
