--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -121,6 +121,7 @@
     <string name="item_addProblem">Додати проблему</string>
     <string name="message_log_in_to_vote">Увійдіть, щоб голосувати</string>
     <string name="refresh_database_now">Оновити базу даних</string>
+    <string name="delete_comment_message">Чи Ви впевнені, що бажаєте видалити коментар?</string>
     <string name="want_edit_problem">Ви насправді хочете редагувати цю проблему?</string>
     <string name="edit_problem_fragment">Редагувати проблему</string>
     <string name="solved_problem">ВИРІШЕНА</string>
