--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -117,6 +117,8 @@
     <string name="filters_menu_item_title">Фильтры</string>
     <string name="nav_titles_statistics">Статистика</string>
     <string name="nav_titles_top10">Топ 10</string>
+    <string name="google_login">Войти с Google+</string>
+    <string name="facebook_login">Войти с Facebook</string>
     <string name="item_addProblem">Добавить проблему</string>
     <string name="want_delete_problem">Вы действительно хотите удалить эту проблему?</string>
     <string name="message_log_in_to_vote">Войдите чтобы голосовать</string>
