--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,10 @@
     <string name="starting_date">Start date</string>
     <string name="end_date">End date</string>
     <string name="nav_titles_statistics">Statistics</string>
+    <string name="facebook_app_id">941941442530575</string>
+    <string name="google_login">Login with Google+</string>
+    <string name="facebook_login">Login with Facebook</string>
+
     <string name="unsolved_problem">UNSOLVED</string>
     <string name="solved_problem">SOLVED</string>
     <string name="title_activity_add_problem" translatable="false">AddProblemActivity</string>
