--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,9 @@
     <string name="only_my_problems">Show only my problems</string>
     <string name="delete_comment_message">Are you sure that you want to delete this comment?</string>
     <string name="done">Done</string>
+    <string name="top_discussed">Discussed</string>
+    <string name="top_important">Important</string>
+    <string name="top_popular">Popular</string>
     <!---->
 </resources>
 
