--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -108,4 +108,6 @@
     <string name="top_important">Важливі</string>
     <string name="top_discussed">Обговорювані</string>
     <string name="password_doesnt_match">Паролі не співпадають</string>
+    <string name="delete_menu_item_string">Видалити</string>
+    <string name="edit_menu_item_string">Редагувати</string>
 </resources>
